--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,35 @@ version: '3.8'
 
 services:
   backend:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: onlearn-backend
     ports:
-      - "5000:5000"
-    environment:
-      - FLASK_ENV=development
-      - PORT=5000
+      - "8000:8000"
     volumes:
-      - ./:/app
+      - ./app.db:/app/app.db
+    environment:
+      - PYTHONUNBUFFERED=1
     restart: unless-stopped
+    networks:
+      - onlearn-network
+
+  frontend:
+    build:
+      context: ../frontend
+      dockerfile: Dockerfile
+    container_name: onlearn-frontend
+    ports:
+      - "8080:8080"
+    environment:
+      - VITE_API_URL=http://localhost:8000
+    depends_on:
+      - backend
+    restart: unless-stopped
+    networks:
+      - onlearn-network
+
+networks:
+  onlearn-network:
+    driver: bridge
